# yi

./: gua_sprite.py  main.py  pyproject.toml
data/: gua64.yaml
resources/: map.tmx
tests/: test_yi.py
yi/: data.py  gua.py  resources.py
