[tool.poetry]
name = "yi"
version = "0.1.0"
description = ""
authors = ["xashes <xashes@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pyglet = "^1.5.16"
arcade = "^2.5.6"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
